# src/modules/restaurants/restaurants.controller.ts
@@ -1,16 +1,6 @@
-﻿import {
-  Body,
-  Controller,
-  Delete,
-  Get,
-  Param,
-  Patch,
-  Post,
-} from '@nestjs/common';
-import { Public } from '../../common/decorators/public.decorator';
+﻿import { Body, Controller, Patch } from '@nestjs/common';
 import { Roles } from '../../common/decorators/roles.decorator';
 import { RoleEnum } from '../roles/role.enum';
-import { CreateRestaurantDto } from './dto/create-restaurant.dto';
 import { UpdateRestaurantDto } from './dto/update-restaurant.dto';
 import { RestaurantsService } from './restaurants.service';
 
@@ -18,7 +8,6 @@ import {
   ApiBearerAuth,
   ApiBody,
   ApiOperation,
-  ApiParam,
   ApiResponse,
   ApiTags,
 } from '@nestjs/swagger';
@@ -27,53 +16,10 @@ import {
 export class RestaurantsController {
   constructor(private readonly service: RestaurantsService) {}
 
-  @Get()
-  @Public()
-  @ApiOperation({ summary: 'Find All' })
-  @ApiResponse({ status: 200, description: 'Successful response' })
-  @ApiResponse({
-    status: 400,
-    description: 'Validation or business-rule error',
-  })
-  @ApiResponse({ status: 401, description: 'Unauthorized' })
-  findAll() {
-    return this.service.findAll();
-  }
-
-  @Get(':id')
-  @Public()
-  @ApiOperation({ summary: 'Find One' })
-  @ApiParam({ name: 'id', required: true, type: String })
-  @ApiResponse({ status: 200, description: 'Successful response' })
-  @ApiResponse({
-    status: 400,
-    description: 'Validation or business-rule error',
-  })
-  @ApiResponse({ status: 401, description: 'Unauthorized' })
-  findOne(@Param('id') id: string) {
-    return this.service.findById(id);
-  }
-
-  @Post()
-  @ApiBearerAuth('JWT-auth')
-  @ApiOperation({ summary: 'Create' })
-  @ApiBody({ type: CreateRestaurantDto })
-  @ApiResponse({ status: 201, description: 'Successful response' })
-  @ApiResponse({
-    status: 400,
-    description: 'Validation or business-rule error',
-  })
-  @ApiResponse({ status: 401, description: 'Unauthorized' })
-  @Roles(RoleEnum.ADMIN)
-  create(@Body() dto: CreateRestaurantDto) {
-    return this.service.create(dto);
-  }
-
-  @Patch(':id')
+  @Patch()
   @ApiBearerAuth('JWT-auth')
   @ApiOperation({ summary: 'Update' })
   @ApiBody({ type: UpdateRestaurantDto })
-  @ApiParam({ name: 'id', required: true, type: String })
   @ApiResponse({ status: 200, description: 'Successful response' })
   @ApiResponse({
     status: 400,
@@ -81,23 +27,7 @@ export class RestaurantsController {
   })
   @ApiResponse({ status: 401, description: 'Unauthorized' })
   @Roles(RoleEnum.ADMIN)
-  update(@Param('id') id: string, @Body() dto: UpdateRestaurantDto) {
-    return this.service.update(id, dto);
-  }
-
-  @Delete(':id')
-  @ApiBearerAuth('JWT-auth')
-  @ApiOperation({ summary: 'Remove' })
-  @ApiParam({ name: 'id', required: true, type: String })
-  @ApiResponse({ status: 200, description: 'Successful response' })
-  @ApiResponse({
-    status: 400,
-    description: 'Validation or business-rule error',
-  })
-  @ApiResponse({ status: 401, description: 'Unauthorized' })
-  @Roles(RoleEnum.ADMIN)
-  async remove(@Param('id') id: string) {
-    await this.service.remove(id);
-    return { success: true };
+  update(@Body() dto: UpdateRestaurantDto) {
+    return this.service.updateSingleton(dto);
   }
 }
